--- a/main.css
+++ b/main.css
@@ -1,23 +1,15 @@
-*{
-    padding: 5px;
-    margin: auto;
-}
-
 body{
     font-family: 'Poppins', sans-serif;
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight: 400;
     line-height: 1.4;
-    padding: 20px;
     background-color: rgb(41, 165, 171);
     text-align: center;
 }
 
 #main{
     /* color:whitesmoke; */
-    padding: 20px;
-    width: 75%;
-    margin: 0;
+    width: 100%;
 }
 
 #description{
@@ -28,13 +20,6 @@ body{
     background-color: rgba(128, 128, 128, 0.802);
     margin: 0% 20% 0 20%;
     padding: 2.5em;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    /* float content to the left
-    NOTE: It didn't work when you added float right 
-        here. How to go about this is... pointing to each
-        element and float them left from there. */
 }
 
 #survey-form p{
@@ -49,4 +34,18 @@ body{
     width: 100%;
     padding: 0.625rem;
     resize: vertical;
+}
+
+input{
+    float: left;
+    width: 100%;
+}
+
+label{
+    float: left;
+}
+
+button{
+    min-height:40px;
+    width: 100%;
 }
