--- a/main.css
+++ b/main.css
@@ -3,23 +3,27 @@ body{
     font-size: 1.2rem;
     font-weight: 400;
     line-height: 1.4;
-    background-color: rgb(41, 165, 171);
+    background: linear-gradient(rgb(41, 165, 171), #00007F);
     text-align: center;
 }
 
 #main{
     /* color:whitesmoke; */
     width: 100%;
+    margin: 0 auto;
 }
 
 #description{
-    margin: 0 20em 0 20em;
+    margin-inline-start: 20em;
+    margin-inline-end: 20em;
 }
 
 #survey-form{
     background-color: rgba(128, 128, 128, 0.802);
+    border: 5px solid rgba(66, 104, 106, 0.461);
     margin: 0% 20% 0 20%;
-    padding: 2.5em;
+    padding: 1.8em;
+    box-shadow: 0 0 20px 0 rgba(22, 30, 31, 0.461);
 }
 
 #survey-form p{
@@ -36,14 +40,17 @@ body{
     resize: vertical;
 }
 
+label{
+    display: flex;
+    align-items: center;
+    margin-bottom: 0.3rem;
+}
+
 input{
     float: left;
     width: 100%;
 }
 
-label{
-    float: left;
-}
 
 button{
     min-height:40px;
