--- a/main.css
+++ b/main.css
@@ -14,3 +14,18 @@ body {
     width: 100%;
     min-height: 100vh;
 }
+
+h1, p {
+    margin: 1em auto;
+    text-align: center;
+}
+
+form {
+    width: 60vw;
+    max-width: 500px;
+    min-width: 500px;
+    margin: 0 auto;
+}
+
+
+
