--- a/main.css
+++ b/main.css
@@ -53,9 +53,14 @@ input, textarea {
     color: #ffffff;
 }
 
-input[type="radio"] [type="checkbox"] {
+.inline {
     width: unset;
     margin: 0 0.5em 0 0;
     vertical-align: middle;
 }
 
+#submit {
+    display: block;
+    width: 60%;
+    margin: 0 auto;
+}
